discussion/kv_engine/126024/126024_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Update get_scope_id and get_collection_id to check that the
current user has any access to the scope or collection.

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-20 13:54:22.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 14:54:13.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27630/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27630/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1800/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1800/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1800/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/319/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23629/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2280/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3217/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3296/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11085/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-04-21 09:21:10.000000000
Message: 
Patch Set 6:

(1 comment)
Line:1840, engines/ep/src/ep_engine.cc -> Should we consider adding a version to checkPrivilege which don't log missing privileges? In this case you don't really need read access, you just want to check if we have _some_ access.. (and we don't want to flood the log with 

            LOG_INFO(
                    "{} RBAC {} missing privilege {} for {} in bucket:[{}] "
                    "with context: {} UUID:[{}]",
                    connection.getId(),
                    connection.getDescription(),
                    privilege_string,
                    command,
                    connection.getBucket().name,
                    context,
                    getEventId());

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-04-22 15:43:35.000000000
MISMATCHED INLINE COMMENT
Line:1840, engines/ep/src/ep_engine.cc -> good suggestion, we definitley don't want to flood for that issue
----------------------------------------------------------------------------------------------------------------------
